--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AsfandYar2.github.io/reacttask/",
+  "homepage": "https://AsfandYar2.github.io/react-task/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
